--- a/src/components/Public/Navbar/Navbar.scss
+++ b/src/components/Public/Navbar/Navbar.scss
@@ -3,10 +3,10 @@
     top: 0;
     width: 100%;
     z-index: 99;
-    background-color: transparent !important;
     height: 128px;
     transition: .25s;
     padding: 0 1.5em !important;
+    background-color: white;
 }
 
 .navbar-transparent {
@@ -14,7 +14,16 @@
 }
 
 .navbar-active {
-    background-color: #153E75 !important;
-    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+    border-bottom: 1px solid rgba(39, 40, 44, 0.2);
     z-index: 2;
+}
+
+body.chakra-ui-dark {
+    .navbar-wrapper {
+        background-color: #1a202c;
+    }
+
+    .navbar-active {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
 }
