--- a/src/containers/Dashboard/Dashboard.scss
+++ b/src/containers/Dashboard/Dashboard.scss
@@ -2,6 +2,8 @@
     height: 100vh;
 
     .sidebar {
+        position: fixed;
+        left: 0;
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -9,6 +11,7 @@
         box-shadow: rgba(0, 0, 0, 0.1) 0px 7px 14px 0px, rgba(0, 0, 0, 0.07) 0px 3px 6px 0px;
         height: 100vh;
         background-color: #f8f8f8;
+        width: 20%;
 
         .sidebar-content {
             display: flex;
@@ -45,6 +48,11 @@
     }
 
     .dashboard {
+        height: 100%;
+        width: 80%;
+        position: absolute;
+        right: 0;
+
         .dashboard-frontpage {
             height: 100%;
         }
