--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,6 +6,32 @@
     outline: 0;
 }
 
+.root {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.transition-group {
+    flex: 1;
+    position: relative;
+}
+
+.fade-enter .page {
+    opacity: 0;
+    z-index: 1;
+}
+
+.fade-enter.fade-enter-active .page {
+    opacity: 1;
+    transition: opacity 450ms ease-in;
+}
+
+.wrapper {
+    width: 60%;
+    margin: auto auto;
+}
+
 .h-100 {
     height: 100%;
 }
