--- a/src/hoc/NoMatch/NoMatch.scss
+++ b/src/hoc/NoMatch/NoMatch.scss
@@ -14,4 +14,9 @@
     h3 {
         font-size: 3rem;
     }
+
+    &.no-match-wrapper-public {
+        height: 100%;
+        padding-top: 50px;
+    }
 }
