--- a/src/pages/Dashboard/Profile/Profile.scss
+++ b/src/pages/Dashboard/Profile/Profile.scss
@@ -1,4 +1,6 @@
 .dashboard-profile {
+    height: 100vh !important;
+
     .avatar-wrapper {
         position: relative;
         max-width: 256px;
