--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,15 +1,6 @@
-.skewed {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    width: 100%;
-    height: 90%;
-    background: #153E75;
-    z-index: 1;
-    transform: skewY(5deg);
-    transform-origin: top right;
+.home {
+    position: relative;
+    height: 75vh;
 }
 
 .section {
@@ -22,9 +13,8 @@
     align-items: center;
     flex-direction: column;
     position: absolute;
-    color: #fff;
     z-index: 1;
-    margin-top: 250px;
+    margin-top: 200px;
     width: 100%;
     text-align: center;
 
@@ -32,8 +22,14 @@
         margin-top: 25px;
 
         * {
-            margin: auto 10px;
+            margin: auto 5px;
         }
+    }
+}
+
+body.chakra-ui-dark {
+    .shape-fill {
+        fill: #1a202c;
     }
 }
 
